# ddd-samples

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  postman_collection.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DDD_CONCEPTS.md  ORDER_FLOW_GUIDE.md  TESTING_GUIDE.md
migrations/: 001_create_orders_table.sql  002_create_order_lines_table.sql  003_create_inventories_table.sql
src/: adapter.rs  application.rs  domain.rs  main.rs
src/adapter/: database_config.rs  database_error.rs  database_migration.rs  driven.rs  driver.rs
src/adapter/driven/: console_logger.rs  event_bus.rs  event_publisher.rs  inventory_repository.rs  order_repository.rs
src/adapter/driver/: request_dto.rs  response_dto.rs  rest_api.rs
src/application/: error.rs  service.rs
src/application/service/: inventory_query_service.rs  order_query_service.rs
src/domain/: error.rs  event.rs  event_bus.rs  handler.rs  logging.rs  model.rs  port.rs  serialization.rs  service.rs
src/domain/model/: inventory.rs  order.rs  value_objects.rs
tests/: property_tests.rs  saga_integration_tests.rs
