[package]
name = "bookstore-order-management"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
async-trait = "0.1"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
axum-test = "15.0"

# 統合テストの設定
[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[test]]
name = "saga_integration_tests"
path = "tests/saga_integration_tests.rs"
